--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 <!--- Load fonts -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.1.2/css/material-design-iconic-font.min.css">
 <!-- Load Data Bot -->
-        <script src=".../data-arlet-v2.js"></script>
-        <script src="...ai-arlet-v2.js"></script>
-        <script src=".../script.js"></script>
+        <script src="https://raw.githack.com/LuisFernandoOlguinPerez/Arlet-AI-ChatBot-App/main/data-arlet-v2.js"></script>
+        <script src="https://raw.githack.com/LuisFernandoOlguinPerez/Arlet-AI-ChatBot-App/main/ai-arlet-v2.js"></script>
+        <script src="https://raw.githack.com/LuisFernandoOlguinPerez/Arlet-AI-ChatBot-App/main/script.js"></script>
   </head>
   <body>
 <!-- Load Audios-->
