--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
   </head>
   <body>
 <!-- Load Audios-->
-<audio id="voice" src="https://mathriz-mxl.000webhostapp.com/chatbot/notification/teclas.mp3"></audio>
-<audio id="typing" src="https://mathriz-mxl.000webhostapp.com/chatbot/notification/teclas.mp3"></audio>
-<audio id="send" src="https://mathriz-mxl.000webhostapp.com/chatbot/notification/send.mp3"></audio>
-<audio id="recived" src="https://mathriz-mxl.000webhostapp.com/chatbot/notification/recived.mp3"></audio>
+<audio id="voice" src="https://raw.githack.com/LuisFernandoOlguinPerez/Arlet-AI-ChatBot-App/main/.none"></audio>
+<audio id="typing" src="https://raw.githack.com/LuisFernandoOlguinPerez/Arlet-AI-ChatBot-App/main/sounds/teclas.mp3"></audio>
+<audio id="send" src="https://raw.githack.com/LuisFernandoOlguinPerez/Arlet-AI-ChatBot-App/main/sounds/send.mp3"></audio>
+<audio id="recived" src="https://raw.githack.com/LuisFernandoOlguinPerez/Arlet-AI-ChatBot-App/main/sounds/recived.mp3"></audio>
 <!-- Div Loader -->
 <div class="box" id="box">
     <div class="loader">
